--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <!-- This is a comment! -->
+    <head>
+       <link rel="stylesheet" href="style.css">
+       <title>Alusa's Website</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
